fixed text color appearing invisible/white

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -40,6 +40,7 @@ section.filters button:hover {
 .locations h3, .amenities h3 {
     font-weight: 600;
     font-size: 16px;
+    color: black;
     text-align: left;
     margin-top: 20;
     margin-bottom: 0;
@@ -49,6 +50,7 @@ section.filters button:hover {
 .locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
+    color: black;
     text-align: left;
     margin-top: 0;
     margin-bottom: 0;
